-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0 Beta
When running an application using QOpenGLWindow following warning is shown:
Problem creating accessible interface for: OpenGLWindow(0x7fff596f17a8) Make sure to deploy Qt with accessibility plugins.
qopenglwindow example application (shipped with Qt) can be used to reproduce this issue.
Issue can be reproduced at least on OS X.